# ruqaqa-mobile-app

./: .gitignore  CLAUDE.md  EXPO_MIGRATION_PLAN.md  app.json  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml
.claude/agents/: debugger-fixer.md
.maestro/: app-launch.yaml  config.yaml  keycloak-sso-fresh-login.yaml  keycloak-sso-login.yaml  language-switch.yaml  login-screen-elements.yaml  splash-screen.yaml  transaction-history.yaml
app/: _layout.tsx  index.tsx  login.tsx
app/(app)/: _layout.tsx  index.tsx
app/auth/: callback.tsx
docs/: architecture-transaction-history.md  design-system.md  project-structure.md  receipt-editor-architecture.md  receipt-editor-security-review.md  share-intent-architecture.md  share-intent-security-review.md
modules/expo-ffmpeg/: .gitignore  BUILD_PLAN.md  CLAUDE.md  README.md  expo-module.config.json  jest.config.js  package.json  pnpm-lock.yaml
modules/expo-ffmpeg/android/src/main/cpp/: CMakeLists.txt  ffmpeg_jni.c
plugins/: withDebugAppName.js  withDebugApplicationIdSuffix.js  withDebugIconTint.js  withDebugScheme.js  withShareIntent.js
scripts/: seed-gallery.ts
src/__mocks__/: expo-ffmpeg.js  expo-keep-awake.js  expo-share-intent.js  fileMock.js  react-native-compressor.js
src/hooks/: useAppModule.ts  useAuthHeaders.ts  useDoubleBackExit.ts  useExposeRefresh.ts  usePagedList.ts  useShareIntent.ts
src/i18n/: DirectionProvider.tsx  ar.ts  en.ts  index.ts
src/navigation/: AppModuleContext.ts  FinanceShell.tsx  GalleryShell.tsx
src/services/: apiClient.ts  apkUpdateService.ts  appLifecycle.ts  (+14 more)
(+328 files in other folders)
